--- a/package.json
+++ b/package.json
@@ -8,7 +8,27 @@
     "build": "vite build",
     "build:dev": "vite build --mode development",
     "lint": "eslint .",
-    "preview": "vite preview"
+    "lint:fix": "eslint . --fix",
+    "preview": "vite preview",
+    "prepare": "husky",
+    "check-arch": "depcruise --validate .dependency-cruiser.cjs src",
+    "visualize-deps": "depcruise --include-only '^src' --output-type dot src | dot -T svg > dependency-graph.svg",
+    "validate-arch": "node ./scripts/validate-architecture.js",
+    "arch:report": "node ./scripts/architecture-change-control.js",
+    "arch:monitor": "node ./scripts/architecture-change-control.js && npm run visualize-deps",
+    "test": "jest",
+    "test:integration": "jest --testPathPattern=src/__tests__/integration",
+    "test:watch": "jest --watch",
+    "test:arch": "npm run test:integration && npm run validate-arch",
+    "scaffold": "plop",
+    "scaffold:component": "plop ui-component",
+    "scaffold:feature": "plop feature",
+    "scaffold:service": "plop service",
+    "scaffold:hook": "plop hook",
+    "scaffold:integration": "plop integration-hook",
+    "arch:check": "npm run validate-arch",
+    "arch:fix": "npm run lint:fix && npm run check-arch",
+    "ci:arch": "npm run arch:report && npm run check-arch && npm run test:integration"
   },
   "dependencies": {
     "@hookform/resolvers": "^3.9.0",
@@ -40,6 +60,7 @@
     "@radix-ui/react-toggle": "^1.1.0",
     "@radix-ui/react-toggle-group": "^1.1.0",
     "@radix-ui/react-tooltip": "^1.1.4",
+    "@reduxjs/toolkit": "^2.8.2",
     "@tanstack/react-query": "^5.56.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
@@ -53,6 +74,7 @@
     "react-day-picker": "^8.10.1",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.53.0",
+    "react-redux": "^9.2.0",
     "react-resizable-panels": "^2.1.3",
     "react-router-dom": "^6.26.2",
     "recharts": "^2.12.7",
@@ -65,18 +87,32 @@
   "devDependencies": {
     "@eslint/js": "^9.9.0",
     "@tailwindcss/typography": "^0.5.15",
+    "@testing-library/dom": "^10.4.0",
+    "@testing-library/jest-dom": "^6.6.3",
+    "@testing-library/react": "^16.3.0",
+    "@testing-library/react-hooks": "^8.0.1",
+    "@types/jest": "^29.5.14",
     "@types/node": "^22.5.5",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
+    "@typescript-eslint/eslint-plugin": "^8.32.1",
+    "@typescript-eslint/parser": "^8.32.1",
     "@vitejs/plugin-react-swc": "^3.5.0",
     "autoprefixer": "^10.4.20",
+    "dependency-cruiser": "^16.10.2",
     "eslint": "^9.9.0",
     "eslint-plugin-react-hooks": "^5.1.0-rc.0",
     "eslint-plugin-react-refresh": "^0.4.9",
     "globals": "^15.9.0",
+    "husky": "^9.1.7",
+    "jest": "^29.7.0",
+    "jest-environment-jsdom": "^29.7.0",
+    "lint-staged": "^16.0.0",
     "lovable-tagger": "^1.1.7",
+    "plop": "^4.0.1",
     "postcss": "^8.4.47",
     "tailwindcss": "^3.4.11",
+    "ts-jest": "^29.3.3",
     "typescript": "^5.5.3",
     "typescript-eslint": "^8.0.1",
     "vite": "^5.4.1"
