Enhance landing page and fix architectural issues
- Replace AnimatedEarth with more relatable travel image and testimonial
- Fix circular dependencies in user-profile feature to align with architectural principles
- Improve type safety by eliminating 'any' types throughout the codebase
- Implement proper error handling patterns for better exception management
- Fix useEffect dependencies and remove duplicate conditions
- Update documentation to remove references to deleted components

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -23,8 +23,13 @@
   "plugins": [
     "react",
     "@typescript-eslint",
-    "import",
-    "planora-architecture"
+    "import"
+  ],
+  "overrides": [
+    {
+      "files": ["**/*.{ts,tsx,js,jsx}"],
+      "plugins": ["./eslint-plugins"]
+    }
   ],
   "settings": {
     "react": {
@@ -80,6 +85,6 @@
     ],
     
     // Planora Architecture Rules
-    "planora-architecture/enforce-architecture": "error"
+    "./eslint-plugins/enforce-architecture": "error"
   }
 }
