--- a/package.json
+++ b/package.json
@@ -61,7 +61,9 @@
     "@radix-ui/react-toggle-group": "^1.1.0",
     "@radix-ui/react-tooltip": "^1.1.4",
     "@reduxjs/toolkit": "^2.8.2",
+    "@supabase/supabase-js": "^2.49.4",
     "@tanstack/react-query": "^5.56.2",
+    "@types/three": "^0.176.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "^1.0.0",
@@ -81,6 +83,7 @@
     "sonner": "^1.5.0",
     "tailwind-merge": "^2.5.2",
     "tailwindcss-animate": "^1.0.7",
+    "three": "^0.176.0",
     "vaul": "^0.9.3",
     "zod": "^3.23.8"
   },
@@ -111,6 +114,7 @@
     "lovable-tagger": "^1.1.7",
     "plop": "^4.0.1",
     "postcss": "^8.4.47",
+    "supabase": "^2.23.1",
     "tailwindcss": "^3.4.11",
     "ts-jest": "^29.3.3",
     "typescript": "^5.5.3",
