--- a/eslint-plugins/package.json
+++ b/eslint-plugins/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "eslint-plugin-planora-architecture",
+  "name": "eslint-plugins",
   "version": "1.0.0",
   "description": "ESLint plugin for enforcing Planora's architectural principles",
   "main": "index.js",
