--- a/.lintstagedrc.json
+++ b/.lintstagedrc.json
@@ -1,7 +1,6 @@
 {
   "*.{ts,tsx}": [
-    "eslint --fix",
-    "npx depcruise --validate .dependency-cruiser.cjs"
+    "eslint --fix"
   ],
   "*.{js,jsx}": [
     "eslint --fix"
