--- a/package.json
+++ b/package.json
@@ -114,6 +114,7 @@
     "lovable-tagger": "^1.1.7",
     "plop": "^4.0.1",
     "postcss": "^8.4.47",
+    "prettier": "^3.5.3",
     "supabase": "^2.23.1",
     "tailwindcss": "^3.4.11",
     "ts-jest": "^29.3.3",
