--- a/package.json
+++ b/package.json
@@ -104,6 +104,9 @@
     "autoprefixer": "^10.4.20",
     "dependency-cruiser": "^16.10.2",
     "eslint": "^9.9.0",
+    "eslint-import-resolver-typescript": "^4.3.5",
+    "eslint-plugin-import": "^2.31.0",
+    "eslint-plugin-react": "^7.37.5",
     "eslint-plugin-react-hooks": "^5.1.0-rc.0",
     "eslint-plugin-react-refresh": "^0.4.9",
     "globals": "^15.9.0",
