cleaned several things

--- a/.env.example
+++ b/.env.example
@@ -2,7 +2,20 @@
 # Create a new project at https://supabase.com and fill in these values
 VITE_SUPABASE_URL=https://your-project-id.supabase.co
 VITE_SUPABASE_ANON_KEY=your-anon-key-from-api-settings
+VITE_SUPABASE_SERVICE_ROLE_KEY=your-service-role-key-from-api-settings
+
+# Authentication Configuration
+VITE_SITE_URL=http://localhost:5173
+VITE_AUTH_REDIRECT_URL=http://localhost:5173/auth/callback
 
 # Feature Flags
 VITE_ENABLE_GOOGLE_AUTH=true
 VITE_ENABLE_APPLE_AUTH=false
+VITE_ENABLE_EMAIL_AUTH=true
+
+# External API Keys (add any additional API keys your project needs)
+# VITE_OPENAI_API_KEY=your-openai-api-key
+# VITE_MAPBOX_API_KEY=your-mapbox-api-key
+
+# Development Settings
+VITE_NODE_ENV=development
