--- a/package.json
+++ b/package.json
@@ -7,15 +7,15 @@
     "dev": "vite",
     "build": "vite build",
     "build:dev": "vite build --mode development",
-    "lint": "eslint .",
-    "lint:fix": "eslint . --fix",
+    "lint": "eslint . --config ./eslint/eslint.config.js",
+    "lint:fix": "eslint . --config ./eslint/eslint.config.js --fix",
     "preview": "vite preview",
     "prepare": "husky",
     "check-arch": "depcruise --validate .dependency-cruiser.cjs src",
     "visualize-deps": "depcruise --include-only '^src' --output-type dot src | dot -T svg > dependency-graph.svg",
-    "validate-arch": "node ./scripts/validate-architecture.js",
+    "validate-arch": "node ./scripts/architecture-validator.js",
     "arch:report": "node ./scripts/architecture-change-control.js",
-    "arch:monitor": "node ./scripts/architecture-change-control.js && npm run visualize-deps",
+    "arch:monitor": "node ./scripts/architecture-validator.js && npm run visualize-deps",
     "test": "jest",
     "test:integration": "jest --testPathPattern=src/__tests__/integration",
     "test:watch": "jest --watch",
@@ -27,8 +27,8 @@
     "scaffold:hook": "plop hook",
     "scaffold:integration": "plop integration-hook",
     "arch:check": "npm run validate-arch",
-    "arch:fix": "npm run lint:fix && npm run check-arch",
-    "ci:arch": "npm run arch:report && npm run check-arch && npm run test:integration"
+    "arch:fix": "npm run lint:fix && npm run validate-arch",
+    "ci:arch": "npm run arch:report && npm run validate-arch && npm run test:integration"
   },
   "dependencies": {
     "@hookform/resolvers": "^3.9.0",
