--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,3 +1,12 @@
+/**
+ * Root TypeScript Configuration
+ * 
+ * This is the project-wide configuration that references other specific configs:
+ * - tsconfig.app.json: Configuration for the React application code
+ * - tsconfig.node.json: Configuration for Node.js scripts and Vite config
+ * 
+ * The paths here are shared across all configurations for consistent imports.
+ */
 {
   "files": [],
   "references": [
