refactor: reorganize database-related files following architectural principles
- Create dedicated src/database structure for better organization

- Move SQL schema files to src/database/schema with birthday field added

- Centralize Supabase client in src/database/client following naming conventions

- Update all imports across the codebase to use the new location

- Add comprehensive database documentation in docs/database

- Update .env.example with proper authentication URLs

- Maintain feature-first organization and named exports

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -26,7 +26,8 @@
       "@types/*": ["./src/types/*"],
       "@lib/*": ["./src/lib/*"],
       "@constants/*": ["./src/constants/*"],
-      "@styles/*": ["./src/styles/*"]
+      "@styles/*": ["./src/styles/*"],
+      "@database/*": ["./database/*"]
     },
     "esModuleInterop": true,
     "jsx": "react",
