fix: resolve TypeScript errors and add SQL setup for account deletion
- Create deno.d.ts for proper TypeScript type declarations in Edge Functions
- Rename index.ts to accountPurgeService.ts following naming conventions
- Add account-deletion-setup.sql to fix missing DB columns
- Update Edge Function config to use new file name

--- a/supabase/functions/scheduled-account-purge/config.toml
+++ b/supabase/functions/scheduled-account-purge/config.toml
@@ -1,3 +1,4 @@
 [functions.scheduled-account-purge]
 schedule = "0 0 * * *"  # Run daily at midnight
 verified_jwt = false
+entrypoint = "./accountPurgeService.ts"
