--- a/.env.example
+++ b/.env.example
@@ -12,6 +12,7 @@ VITE_AUTH_REDIRECT_URL=http://localhost:3000/auth/callback
 # For production (uncomment when deploying)
 # VITE_SITE_URL=https://planora-ai-plum.vercel.app
 # VITE_AUTH_REDIRECT_URL=https://planora-ai-plum.vercel.app/auth/callback
+# VITE_PRODUCTION_URL=https://planora-ai-plum.vercel.app
 
 # Alternative deployment URLs
 # VITE_AUTH_REDIRECT_URL=https://planora-ai-nnvvee96s-projects.vercel.app/auth/callback
