refactor: organize configuration and tooling files following architectural principles
This commit improves project organization by:
- Creating dedicated config/ directory with subdirectories for dependencies, deployment, and linting
- Moving plop code generation to tools/plop/ with organized templates
- Updating documentation to reflect the new structure
- Maintaining backward compatibility through symbolic links
- Updating GitHub Actions workflow for architecture validation
- Enhancing scaffolding tools with clear template paths

All changes follow Planora's architectural principles while preserving UI integrity and system functionality.

--- a/.github/workflows/architecture-validation.yml
+++ b/.github/workflows/architecture-validation.yml
@@ -25,7 +25,10 @@ jobs:
         run: npm ci
       
       - name: Validate architecture boundaries
-        run: npm run check-arch
+        run: |
+          # Create symlink to dependency cruiser config for backwards compatibility
+          ln -sf config/dependencies/.dependency-cruiser.cjs .dependency-cruiser.cjs
+          npm run check-arch
       
       - name: Run ESLint checks
         run: npm run lint
@@ -65,6 +68,8 @@ jobs:
       - name: Generate architecture report
         run: |
           mkdir -p architecture-report
+          # Create symlink to dependency cruiser config for backwards compatibility
+          ln -sf config/dependencies/.dependency-cruiser.cjs .dependency-cruiser.cjs
           npx depcruise --include-only "^src" --output-type dot src | dot -T svg > architecture-report/dependency-graph.svg
           echo "# Architecture Validation Report" > architecture-report/report.md
           echo "## Generated on $(date)" >> architecture-report/report.md
