--- a/package.json
+++ b/package.json
@@ -20,12 +20,12 @@
     "test:integration": "jest --testPathPattern=src/__tests__/integration",
     "test:watch": "jest --watch",
     "test:arch": "npm run test:integration && npm run validate-arch",
-    "scaffold": "plop",
-    "scaffold:component": "plop ui-component",
-    "scaffold:feature": "plop feature",
-    "scaffold:service": "plop service",
-    "scaffold:hook": "plop hook",
-    "scaffold:integration": "plop integration-hook",
+    "scaffold": "plop --plopfile ./tools/plop/plopfile.js",
+    "scaffold:component": "plop --plopfile ./tools/plop/plopfile.js ui-component",
+    "scaffold:feature": "plop --plopfile ./tools/plop/plopfile.js feature",
+    "scaffold:service": "plop --plopfile ./tools/plop/plopfile.js service",
+    "scaffold:hook": "plop --plopfile ./tools/plop/plopfile.js hook",
+    "scaffold:integration": "plop --plopfile ./tools/plop/plopfile.js integration-hook",
     "arch:check": "npm run validate-arch",
     "arch:fix": "npm run lint:fix && npm run validate-arch",
     "ci:arch": "npm run arch:report && npm run validate-arch && npm run test:integration"
