refactor: consolidate config files and remove redundancy
- Removed duplicate configuration files from config/ subdirectories
- Placed required config files in root directory for tool compatibility
- Fixed TypeScript configuration files (tsconfig.json, tsconfig.app.json, tsconfig.node.json)
- Updated dependency-cruiser configuration format
- Fixed store reference in App.tsx to use storeApi.ts
- Updated all script references to point to correct config paths
- Maintained organized config subdirectories for non-root files
- Eliminated symlinks for cleaner project structure
- Ensured successful project build with correct configurations

--- a/.github/workflows/architecture-validation.yml
+++ b/.github/workflows/architecture-validation.yml
@@ -24,11 +24,12 @@ jobs:
       - name: Install dependencies
         run: npm ci
       
-      - name: Validate architecture boundaries
+      - name: Verify configuration paths
         run: |
-          # Create symlink to dependency cruiser config for backwards compatibility
-          ln -sf config/dependencies/.dependency-cruiser.cjs .dependency-cruiser.cjs
-          npm run check-arch
+          echo "Using config files directly from config directory"
+      
+      - name: Validate architecture boundaries
+        run: npm run check-arch
       
       - name: Run ESLint checks
         run: npm run lint
@@ -65,11 +66,13 @@ jobs:
       - name: Install dependencies
         run: npm ci
       
+      - name: Verify configuration paths
+        run: |
+          echo "Using config files directly from config directory"
+      
       - name: Generate architecture report
         run: |
           mkdir -p architecture-report
-          # Create symlink to dependency cruiser config for backwards compatibility
-          ln -sf config/dependencies/.dependency-cruiser.cjs .dependency-cruiser.cjs
           npx depcruise --include-only "^src" --output-type dot src | dot -T svg > architecture-report/dependency-graph.svg
           echo "# Architecture Validation Report" > architecture-report/report.md
           echo "## Generated on $(date)" >> architecture-report/report.md
