chore: Apply further updates to database schema and related files

--- a/.env.example
+++ b/.env.example
@@ -6,16 +6,26 @@ VITE_SUPABASE_SERVICE_ROLE_KEY=eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJz
 
 # Authentication Configuration
 # For development
-VITE_SITE_URL=http://localhost:3000
-VITE_AUTH_REDIRECT_URL=http://localhost:3000/auth/callback
+VITE_SITE_URL=http://localhost:8080
+VITE_AUTH_REDIRECT_URL=http://localhost:8080/auth/callback
+VITE_EMAIL_CONFIRMATION_URL=http://localhost:8080/auth/email-confirmation
+VITE_PASSWORD_RESET_URL=http://localhost:8080/auth/reset-password
+VITE_EMAIL_CHANGE_VERIFICATION_URL=http://localhost:8080/auth/email-change-verification
+VITE_API_BASE_URL=http://localhost:8080/api
+VITE_GOOGLE_AUTH_URL=http://localhost:8080/auth/google
+VITE_APPLE_AUTH_URL=http://localhost:8080/auth/apple
+VITE_EMAIL_AUTH_URL=http://localhost:8080/auth/email
 
 # For production (uncomment when deploying)
-# VITE_SITE_URL=https://planora-ai-plum.vercel.app
-# VITE_AUTH_REDIRECT_URL=https://planora-ai-plum.vercel.app/auth/callback
-# VITE_PRODUCTION_URL=https://planora-ai-plum.vercel.app
-
-# Alternative deployment URLs
-# VITE_AUTH_REDIRECT_URL=https://planora-ai-nnvvee96s-projects.vercel.app/auth/callback
+# VITE_SITE_URL=https://getplanora.app
+# VITE_AUTH_REDIRECT_URL=https://getplanora.app/auth/callback
+# VITE_EMAIL_CONFIRMATION_URL=https://getplanora.app/auth/email-confirmation
+# VITE_PASSWORD_RESET_URL=https://getplanora.app/auth/reset-password
+# VITE_EMAIL_CHANGE_VERIFICATION_URL=https://getplanora.app/auth/email-change-verification
+# VITE_API_BASE_URL=https://getplanora.app/api
+# VITE_GOOGLE_AUTH_URL=https://getplanora.app/auth/google
+# VITE_APPLE_AUTH_URL=https://getplanora.app/auth/apple
+# VITE_EMAIL_AUTH_URL=https://getplanora.app/auth/email
 
 # Feature Flags
 VITE_ENABLE_GOOGLE_AUTH=true
