--- a/package.json
+++ b/package.json
@@ -93,6 +93,7 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.9.0",
+    "@supabase/functions-js": "^2.4.4",
     "@tailwindcss/typography": "^0.5.15",
     "@testing-library/dom": "^10.4.0",
     "@testing-library/jest-dom": "^6.6.3",
