--- a/package.json
+++ b/package.json
@@ -131,7 +131,8 @@
     "ts-jest": "^29.3.3",
     "typescript": "^5.5.3",
     "typescript-eslint": "^8.0.1",
-    "vite": "^5.4.1"
+    "vite": "^5.4.1",
+    "vite-tsconfig-paths": "^5.1.4"
   },
   "overrides": {
     "@types/react": "^18.3.3"
