feat: Complete intensive architecture and code audit
- Refactored 81 files with architectural improvements
- Added 17 new files for better organization
- Removed 1 obsolete file (userProfileDataManager.ts)
- Enhanced TypeScript types and interfaces
- Improved feature API boundaries
- Fixed authentication flow and error handling
- Optimized user profile integration
- Updated build configuration and dependencies
- Enhanced UI components with proper variants
- Improved Three.js integration with vanilla implementation
- Added comprehensive linting and architectural rules
- Updated gitignore to exclude environment files

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -32,12 +32,12 @@
     },
     "esModuleInterop": true,
     "jsx": "react",
-    "noImplicitAny": false,
-    "noUnusedParameters": false,
+    "noImplicitAny": true,
+    "noUnusedParameters": true,
     "skipLibCheck": true,
     "allowJs": true,
-    "noUnusedLocals": false,
-    "strictNullChecks": false,
+    "noUnusedLocals": true,
+    "strictNullChecks": true,
     "moduleResolution": "node"
   }
 }
