--- a/.gitignore
+++ b/.gitignore
@@ -32,3 +32,8 @@ dist-ssr
 # Generated files
 dependency-graph.svg
 dependency-violations.html
+
+# Environment files
+.env
+.env.local
+.env.*.local
