--- a/package.json
+++ b/package.json
@@ -5,17 +5,22 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
+    "prebuild": "npm run validate-arch && npm run lint && npm run type-check",
     "build": "vite build",
     "build:dev": "vite build --mode development",
     "lint": "eslint . --config ./config/linting/eslint/eslint.config.js",
     "lint:fix": "eslint . --config ./config/linting/eslint/eslint.config.js --fix",
     "preview": "vite preview",
     "prepare": "husky",
+    "type-check": "tsc --noEmit",
+    "format": "prettier --write \"src/**/*.{ts,tsx,js,jsx,json,css,md}\"",
+    "format:check": "prettier --check \"src/**/*.{ts,tsx,js,jsx,json,css,md}\"",
     "check-arch": "depcruise --validate .dependency-cruiser.cjs src",
     "visualize-deps": "depcruise --include-only '^src' --output-type dot src | dot -T svg > dependency-graph.svg",
     "validate-arch": "node ./scripts/architecture-validator.js",
     "arch:report": "node ./scripts/architecture-change-control.js",
-    "arch:monitor": "node ./scripts/architecture-validator.js && npm run visualize-deps",
+    "arch:monitor": "npm run validate-arch && npm run visualize-deps",
+    "security:check": "bash config/deployment/check-secrets.sh",
     "test": "jest",
     "test:integration": "jest --testPathPattern=src/__tests__/integration",
     "test:watch": "jest --watch",
@@ -26,9 +31,8 @@
     "scaffold:service": "plop --plopfile ./config/plop/plopfile.js service",
     "scaffold:hook": "plop --plopfile ./config/plop/plopfile.js hook",
     "scaffold:integration": "plop --plopfile ./config/plop/plopfile.js integration-hook",
-    "arch:check": "npm run validate-arch",
-    "arch:fix": "npm run lint:fix && npm run validate-arch",
-    "ci:arch": "npm run arch:report && npm run validate-arch && npm run test:integration"
+    "ci:arch": "npm run arch:report && npm run validate-arch && npm run test:integration",
+    "ci:full": "npm run security:check && npm run lint && npm run type-check && npm run test && npm run build"
   },
   "dependencies": {
     "@hookform/resolvers": "^3.9.0",
@@ -60,8 +64,8 @@
     "@radix-ui/react-toggle": "^1.1.0",
     "@radix-ui/react-toggle-group": "^1.1.0",
     "@radix-ui/react-tooltip": "^1.1.4",
-    "@react-three/drei": "^9.108.3",
-    "@react-three/fiber": "^8.16.8",
+    "@react-three/drei": "^9.122.0",
+    "@react-three/fiber": "^8.18.0",
     "@reduxjs/toolkit": "^2.8.2",
     "@splinetool/react-spline": "^4.0.0",
     "@splinetool/runtime": "^1.9.96",
@@ -85,6 +89,7 @@
     "react-resizable-panels": "^2.1.3",
     "react-router-dom": "^6.26.2",
     "recharts": "^2.12.7",
+    "scheduler": "^0.23.2",
     "sonner": "^1.5.0",
     "swiper": "^11.2.8",
     "tailwind-merge": "^2.5.2",
@@ -130,6 +135,7 @@
     "prettier": "^3.5.3",
     "supabase": "^2.23.1",
     "tailwindcss": "^3.4.11",
+    "terser": "^5.43.1",
     "ts-jest": "^29.3.3",
     "typescript": "^5.5.3",
     "typescript-eslint": "^8.0.1",
@@ -137,6 +143,9 @@
     "vite-tsconfig-paths": "^5.1.4"
   },
   "overrides": {
-    "@types/react": "^18.3.3"
+    "@types/react": "^18.3.3",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
+    "scheduler": "^0.23.2"
   }
 }
